# rust-cctv

./: .env.example  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  bacon.toml  docker-compose.yml  examples.sh  process_embeddings.sh
qdrant/: seed_qdrant.py
src/: config.rs  handlers.rs  main.rs  scheduler.rs  services.rs
src/clients/: api_client.rs  base_client.rs  cctv_client.rs  mod.rs
src/docs/: mod.rs
src/models/: cctv.rs  mod.rs  search.rs  token.rs
src/services/: ai_service.rs  cctv_api.rs  cctv_service.rs  filename_utils.rs  mod.rs  payload_builder.rs  qdrant_service.rs
tests/: integration-test.sh
