[package]
name = "rust-cctv"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
qdrant-client = "1.10"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tokio-cron-scheduler = "0.9"
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
utoipa-actix-web = "0.1"
